# 19-PersonnelAPI/src/controllers/personnel.controller.js
@@ -9,6 +9,19 @@ module.exports = {
 
     list: async (req, res) => {
 
+        /*
+            #swagger.tags = ["Personnels"]
+            #swagger.summary = "List Personnels"
+            #swagger.description = `
+                You can send query with endpoint for search[], sort[], page and limit.
+                <ul> Examples:
+                    <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>
+                    <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>
+                    <li>URL/?<b>page=2&limit=1</b></li>
+                </ul>
+            `
+        */
+
         const data = await res.getModelList(Personnel, {}, 'departmentId')
 
         res.status(200).send({
@@ -20,6 +33,24 @@ module.exports = {
     },
 
     create: async (req, res) => {
+        /*
+            #swagger.tags = ["Personnels"]
+            #swagger.summary = "Create Personnels"
+            #swagger.parameters['body'] = {
+                in: 'body',
+                required: true,
+                schema: {
+                    departmentId: 'id',
+                    username: "test",
+                    password: "12345",
+                    firstName: "test",
+                    lastName: "deneme",
+                    phone: "055555555",
+                    email: "deneme@test.com",
+                    title: "CEO"
+                }
+            }
+        */
 
         // isLead Control:
         const isLead = req.body?.isLead || false // isLead bilgisini req ten aldık
@@ -41,6 +72,10 @@ module.exports = {
     },
 
     read: async (req, res) => {
+        /*
+            #swagger.tags = ["Personnels"]
+            #swagger.summary = "Get Single Personnel"
+        */
 
         const data = await Personnel.findOne({ _id: req.params.id })
 
@@ -52,6 +87,24 @@ module.exports = {
     },
 
     update: async (req, res) => {
+        /*
+            #swagger.tags = ["Personnels"]
+            #swagger.summary = "Update Personnel"
+            #swagger.parameters['body'] = {
+                in: 'body',
+                required: true,
+                schema: {
+                    departmentId: 'id',
+                    username: "test",
+                    password: "12345",
+                    firstName: "test",
+                    lastName: "deneme",
+                    phone: "055555555",
+                    email: "deneme@test.com",
+                    title: "CEO"
+                }
+            }
+        */
 
         //personelin kendi bilgilerinden bazılarını değiştirmeye engel olmak
         // kendini admin/lead yapamıcak, maaşını değiştiremicek gibi
@@ -90,7 +143,10 @@ module.exports = {
     },
 
     delete: async (req, res) => {
-
+        /*
+            #swagger.tags = ["Personnels"]
+            #swagger.summary = "Delete Personnel"
+        */
         const data = await Personnel.deleteOne({ _id: req.params.id })
 
         res.status(data.deletedCount ? 204 : 404).send({
